--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -17,22 +17,20 @@
 
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-parent</artifactId>
         <version>3.0.5-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    
+
     <artifactId>examples</artifactId>
     <packaging>pom</packaging>
+
     <name>Examples of various use cases</name>
-    
-    <properties>        
-        <manifest.location></manifest.location> <!-- to make nullifiy the property -->
-    </properties>
-    
+
     <modules>
         <module>custom-resolver</module>
         <module>security-lockdown</module>
@@ -41,5 +39,8 @@
         <module>configuration</module>
         <module>operations</module>
     </modules>
-    
+
+    <properties>        
+        <manifest.location></manifest.location> <!-- to make nullifiy the property -->
+    </properties>
 </project>
