--- a/external/pom.xml
+++ b/external/pom.xml
@@ -17,23 +17,25 @@
 
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-parent</artifactId>
         <version>3.0.5-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    
+
     <artifactId>external</artifactId>
     <packaging>pom</packaging>
+
     <name>OSGi repackaging of HK2 dependencies</name>
-    
-    <properties>
-        <findbugs.skip>true</findbugs.skip>
-    </properties>
-    
+
     <modules>
         <module>aopalliance</module>
     </modules>
+
+    <properties>
+        <findbugs.skip>true</findbugs.skip>
+    </properties>
 </project>
