--- a/hk2-testing/hk2-mockito/pom.xml
+++ b/hk2-testing/hk2-mockito/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 
     Copyright (c) 2013, 2018 Oracle and/or its affiliates. All rights reserved.
@@ -25,30 +26,15 @@
         <artifactId>hk2-testing</artifactId>
         <version>3.0.5-SNAPSHOT</version>
     </parent>
+
     <artifactId>hk2-mockito</artifactId>
+
     <name>HK2 Mockito</name>
     <description>A utility for spying on HK2 services using Mockito</description>
-    
+
     <properties>        
         <manifest.location></manifest.location> <!-- to make nullifiy the property -->
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.glassfish.hk2</groupId>
-                <artifactId>hk2-inhabitant-generator</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate-inhabitants</goal>
-                            <goal>generate-test-inhabitants</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <dependency>
@@ -113,4 +99,21 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.glassfish.hk2</groupId>
+                <artifactId>hk2-inhabitant-generator</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-inhabitants</goal>
+                            <goal>generate-test-inhabitants</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
