Update mochito and set bytebuddy.experimental to be able to pass tests on JDK 21
Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>

--- a/pom.xml
+++ b/pom.xml
@@ -788,6 +788,7 @@
                 <configuration>
                     <systemPropertyVariables>
                         <java.util.logging.config.file>logging.properties</java.util.logging.config.file>
+                        <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
