Export non-internal pacakges from hk2-extras
So that it's possible to initialize the default topic handler 
and use other features

--- a/hk2-extras/pom.xml
+++ b/hk2-extras/pom.xml
@@ -91,6 +91,13 @@
                         <goals>
                             <goal>manifest</goal>
                         </goals>
+                        <configuration>
+                            <instructions>
+                                <Export-Package>
+                                    !*.internal,*;version=${project.osgi.version}
+                                </Export-Package>
+                            </instructions>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
