Fixed OSGI exports and removed osgi.bundle files
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

--- a/hk2-configuration/persistence/hk2-xml/main/pom.xml
+++ b/hk2-configuration/persistence/hk2-xml/main/pom.xml
@@ -143,7 +143,9 @@
                 <configuration>
                     <instructions>
                         <Import-Package>
-                            jakarta.validation.*;resolution:=optional,org.hibernate.validator.*;resolution:=optional,*
+                            jakarta.validation.*;resolution:=optional,
+                            org.hibernate.validator.*;resolution:=optional,
+                            *
                         </Import-Package>
                     </instructions>
                     <unpackBundle>true</unpackBundle>
