--- a/class-model/pom.xml
+++ b/class-model/pom.xml
@@ -89,6 +89,11 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <Bundle-Activator>org.glassfish.hk2.classmodel.reflect.util.ClassModelActivator</Bundle-Activator>
+                    </instructions>
+                </configuration>
                 <executions>
                     <execution>
                         <id>bundle-manifest</id>
