--- a/hk2-utils/pom.xml
+++ b/hk2-utils/pom.xml
@@ -62,7 +62,7 @@
             <artifactId>classmate</artifactId>
             <optional>true</optional>
         </dependency>
-        
+
         <!-- Test scope -->
         <dependency>
           <groupId>jakarta.el</groupId>
@@ -91,7 +91,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <configuration>     
+                <configuration>
                     <archive>
                         <manifestFile>target/classes/META-INF/MANIFEST.MF</manifestFile>
                         <manifestEntries>
@@ -104,6 +104,23 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <Export-Package>
+                            org.glassfish.hk2.utilities.cache,
+                            org.glassfish.hk2.utilities.general,
+                            org.glassfish.hk2.utilities.reflection,
+                            org.glassfish.hk2.utilities.reflection.internal,
+                            org.jvnet.hk2.component
+                        </Export-Package>
+                        <DynamicImport-Package>*</DynamicImport-Package>
+                        <Import-Package>
+                            jakarta.validation.*;resolution:=optional,
+                            org.hibernate.validator.*;resolution:=optional,*
+                        </Import-Package>
+                    </instructions>
+                    <unpackBundle>true</unpackBundle>
+                </configuration>
                 <executions>
                     <execution>
                         <id>bundle-manifest</id>
@@ -113,14 +130,6 @@
                         </goals>
                     </execution>
                 </executions>
-                 <configuration>
-                    <instructions>
-                        <Import-Package>
-                            jakarta.validation.*;resolution:=optional,org.hibernate.validator.*;resolution:=optional,*
-                        </Import-Package>
-                    </instructions>
-                    <unpackBundle>true</unpackBundle>
-                </configuration>
             </plugin>
         </plugins>
     </build>
