Removed redundant version declarations
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

--- a/pom.xml
+++ b/pom.xml
@@ -434,6 +434,12 @@
             </dependency>
             <dependency>
                 <groupId>org.ow2.asm</groupId>
+                <artifactId>asm-analysis</artifactId>
+                <version>${asm.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-commons</artifactId>
                 <version>${asm.version}</version>
                 <optional>true</optional>
